# DataSkeptic-Projects

./: README  README.md
C#/C# Database Basics/: Northwind.accdb  Northwind.laccdb
C#/C# Database Basics/Chapter5_WebService/: Chapter5_WS.asmx  Chapter5_WS.asmx.cs  Chapter5_WebService.csproj  Chapter5_WebService.sln  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  Web.config  dbo.Table.sql
C#/C# Programming in easy steps/: Hello-2.cs  Hello.cs  app.cs  text.txt
C#/C# on Linux/: Main.cs  testOfTest.cs
C#/Data Analysis with C#/: TestOfDataAnalysisML.ipynb
C#/LinqPocketReference/: LinqPocketReference.sln
C#/TestVSCodeApp/: TestVSCodeApp.sln
DataBases/AccessDBs/: Northwind.accdb
DataBases/SQLite/: mortality.db  sqldiff  sqlite3_analyzer
DataSets/: Hospitalization_all_locs.csv  geocoded-US.csv
DataSets/Comparing_Hospitals/: hvbp_hcahps.csv  hvbp_safety.csv  hvbp_tps.csv
Python/: DBTest.py  LibCheckList.py  scanner.py  testPlotting.py
Python/HealthcareAnalyticsExercises/: Breast-Cancer-Detection.ipynb  DNA-Classification.ipynb  Diabetes-Onset-Detection.ipynb  Diagnosing-Coronary-Artery-Disease.ipynb  MakingPredictiveModelsInHealthcare-ED_DischargeStatus.ipynb  MeasuringHealthcareQuality-ESRD.ipynb  MeasuringHealthcareQuality-HospitalCompare.ipynb  MeasuringHealthcareQuality.ipynb  Read Me
Python/MathForProgramming/: MANIFEST.in  README.md  setup.cfg
Python/MathForProgramming/MathForProgramming.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
R/: blsAPIExp1.R  blsAPIExp2.R  blsQCEWExp.R  bls_DangerousJobs.R
(+139 files in other folders)
