[metadata]
name = MathForProgramming
version = 1.0
description = A repo to work on the examples from the book "Math For Programming".
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = Marcus Adison Hudgins
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = mathforprogramming
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    mathforprogramming=mathforprogramming:main
[build_ext]
inplace = 1
